# IndiaCodex-2026

PRO_fessors/: .gitignore  Makefile  ProbX_Pitch_Deck.pptx  README.md  docker-compose.yml
PRO_fessors/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  compose.yaml  docker-entrypoint.sh  pyproject.toml
PRO_fessors/backend/alembic/: env.py
PRO_fessors/backend/alembic/versions/: 3b35aa1fb6a9_initial_probx_schema.py
PRO_fessors/backend/app/: __init__.py  config.py  domain.py  main.py  schemas.py  seed.py
PRO_fessors/backend/app/api/: auth.py  deployment.py  drafts.py  health.py  markets.py  projections.py  router.py  transactions.py  websockets.py
PRO_fessors/backend/app/auth/: __init__.py  cip8.py  dependencies.py  session.py
PRO_fessors/backend/app/db/: __init__.py  session.py
PRO_fessors/backend/app/models/: __init__.py  entities.py
PRO_fessors/backend/app/services/: blockfrost.py  commitments.py  events.py  projections.py  transactions.py
PRO_fessors/backend/app/simulation/: __init__.py  engine.py
PRO_fessors/backend/app/websocket/: __init__.py  hub.py
PRO_fessors/backend/app/workers/: __init__.py  jobs.py  queue.py  worker.py
PRO_fessors/backend/tests/: __init__.py  cip8_helpers.py  conftest.py  test_auth.py  test_config.py  test_deployment_status.py  test_markets.py  test_projections_and_payloads.py  test_single_admin_resolution.py  test_websockets.py
PRO_fessors/contracts/: README.md  aiken.toml  plutus.json
PRO_fessors/deployments/: README.md  preprod-plan.json
PRO_fessors/frontend/: .dockerignore  .gitignore  Dockerfile  (+6 more)
(+68 files in other folders)
