[project]
name = "probx-backend"
version = "0.1.0"
description = "ProbX off-chain API, projections, and simulation services"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.14.0,<2",
  "asyncpg>=0.30.0,<1",
  "cbor2>=5.6.5,<6",
  "cryptography>=44.0.0,<46",
  "fastapi>=0.115.6,<1",
  "httpx>=0.28.1,<1",
  "pyjwt>=2.10.1,<3",
  "pydantic>=2.10.4,<3",
  "pydantic-settings>=2.7.0,<3",
  "redis>=5.2.1,<7",
  "rq>=2.1.0,<3",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.34.0,<1",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.20.0,<1",
  "asgi-lifespan>=2.1.0,<3",
  "mypy>=1.14.1,<2",
  "pytest>=8.3.4,<9",
  "pytest-asyncio>=0.25.2,<1",
  "ruff>=0.9.2,<1",
]

[project.scripts]
probx-seed = "app.seed:main"
probx-worker = "app.workers.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["cbor2.*", "rq.*"]
ignore_missing_imports = true
